* updating progress bar with information on current task, number of notes
* Ability to cancel sync via button
* switching sync services/servers doesn't clear notes database anymore
* switching sync servers clears authentication, doesn't authenticate (see "Automatic authentication", above)

UI Tweaks:
* moved Tomdroid toolbar into native ActionBar (https://blueprints.launchpad.net/tomdroid/+spec/actionbar-redesign)
* added basic tablet integration (https://blueprints.launchpad.net/tomdroid/+spec/tablet-ui)

Preference Tweaks
* Added preference for changing base font size
* Added preference button for backing up notes to SD card (when using online sync)
* Added preference button for removing all notes from remote service
* added option to hide/show note templates
* added option to clear local notes database (useful if switching sync services)

Misc:
* fixed SQL query should use "?" (lp:880322)

-------------------------------------------------------------------------------
Version 0.6.0 - "Small World" released on 2012-08-16

* Fix crash when authenticating a server URL containing line breaks (Stefan Hammer, lp:902855)
* SD card synchronisation now removes deleted messages from Database (Stefan Hammer, lp:533933 )
* Can specify folder for SD Card Sync (ie: dropbox) (Stefan Hammer, lp:837119)
* Creating home-screen shortcuts to notes is now possible (Piotr Adamski, 
  lp:882703)
* Reload current Note after sync (Stefan Hammer, lp:675117)
* Under the hood changes (Piotr Adamski)
* Switched to the Launchpad Translation Platform (Stefan Hammer)
* Tons of new translations by the awesome Translators on Launchpad:
   ar: Youssef Habri
   ast: ASTUR2000
   ca: Antonio Vicién Faure
   cs: Jan Dolejš
   da: Mads Boserup Lauritsen
   de: Henrik Graßhoff, Stefan Hammer
   en_GB: Vibhav Pant
   es: Alicia García Adames, Clemens Niesner, Fitoschido, JoLiSh, João Santana
   eu: Asier Iturralde Sarasola
   fo: Jógvan Olsen
   fr: Léo POUGHON
   gd: alasdair caimbeul