@@ -24,7 +24,7 @@
 	>
 
         <activity android:label="@string/app_name"
-        		  android:theme="@style/MyTheme"
+        		  android:theme="@style/LightTheme"
         		  android:name=".ui.Tomdroid"
         		  >
             <intent-filter>
@@ -43,7 +43,7 @@
         </activity>
     
 		<activity android:name=".ui.ViewNote"
-			android:theme="@style/MyTheme"
+			android:theme="@style/LightTheme"
 			android:label="@string/view_title"
 			>
 			<intent-filter>
@@ -55,13 +55,13 @@
 		</activity>
 		<activity android:name=".ui.EditNote"
 			android:configChanges="keyboardHidden|orientation"
-			android:theme="@style/MyTheme"
+			android:theme="@style/LightTheme"
 			android:label="@string/edit_title"
 		    >
 		</activity>
 		
 		<activity android:name=".ui.Search"
-       		  android:theme="@style/MyTheme"
+       		  android:theme="@style/LightTheme"
        		  android:label="@string/search_title"
 	          android:launchMode="singleTop">
 			<intent-filter>
@@ -79,13 +79,13 @@
         />
         
         <activity android:name=".ui.PreferencesActivity" 
-        	android:theme="@style/MyTheme"
+        	android:theme="@style/DarkTheme"
             android:label="@string/app_name">
 
     	</activity>
 
         <activity android:name=".ui.ShortcutActivity" 
-			android:theme="@style/MyTheme"
+			android:theme="@style/LightTheme"
             android:label="@string/shortcut_menu_item_caption">
             <intent-filter>
                 <action android:name="android.intent.action.CREATE_SHORTCUT"/>
@@ -93,7 +93,7 @@
             </intent-filter>
         </activity>
     	<activity android:name=".ui.SyncDialog"  
-			android:theme="@style/MyTheme"
+			android:theme="@style/LightTheme"
         	android:label="@string/app_name">  
 		</activity>  
       <uses-library android:name="android.test.runner" />
