@@ -25,8 +25,9 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     
-<ListView android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+	<ListView android:id="@android:id/list"
+	    android:cacheColorHint="#000000"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"/>
 
 </LinearLayout>
