@@ -68,28 +68,28 @@
 	</ScrollView>
 
 	 <SlidingDrawer
-		android:id="@+id/drawer"
-		android:layout_width="236dp"
+		android:id="@+id/formatBar"
+		android:layout_width="240dp"
 		android:layout_height="48dp"
 		android:layout_alignParentTop="true"
 		android:layout_alignParentRight="true"
 		android:orientation="horizontal"
 		android:handle="@+id/handle"
 		android:content="@+id/format_bar"
+		android:visibility="gone"
 		>
 
 		<ImageView
 			android:id="@id/handle"
 			android:src="@drawable/tray_handle_normal"
-			android:layout_width="20dp"
+			android:layout_width="21dp"
 			android:layout_height="match_parent"
 			/>
 		<LinearLayout android:id="@+id/format_bar" 
 			android:orientation="horizontal"
 			android:layout_width="wrap_content" 
 			android:layout_height="match_parent"
-			android:background="#ffffff"
-			android:padding="1dp"
+			android:background="#c4c6c4"
 			>
 		
 			<ToggleButton  
