@@ -24,15 +24,17 @@
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<item android:id="@+id/edit_note_save"
+		android:icon="@android:drawable/ic_menu_save"
+		android:title="@string/save"
+		android:showAsAction="ifRoom|withText"
+		android:orderInCategory="1"
+		/>
+
     <item android:id="@+id/edit_note_discard"
           android:icon="@android:drawable/ic_menu_close_clear_cancel"
           android:title="@string/discard"
           android:showAsAction="ifRoom|withText"
-          android:orderInCategory="1"
-          />
-    <item android:id="@+id/edit_note_save"
-          android:icon="@android:drawable/ic_menu_save"
-          android:title="@string/save"
           android:orderInCategory="2"
           />
 <!--
@@ -54,5 +56,4 @@
           android:showAsAction="never"
           android:orderInCategory="4"
           />  
->>>>>>> MERGE-SOURCE
 </menu>
