@@ -24,11 +24,18 @@
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+   	<item android:id="@+id/edit_note_save"
+		android:icon="@android:drawable/ic_menu_save"
+		android:title="@string/save"
+		android:showAsAction="ifRoom|withText" 
+		android:orderInCategory="1"
+         />
+    
     <item android:id="@+id/edit_note_discard"
 		android:icon="@android:drawable/ic_menu_close_clear_cancel"
 		android:title="@string/discard"
 		android:showAsAction="ifRoom|withText" 
-		android:orderInCategory="1"
+		android:orderInCategory="2"
 		/>
 <!--
      <item android:id="@+id/edit_note_xml"
@@ -37,12 +44,6 @@
 		android:showAsAction="never|withText" 
 		/> 
 -->
-	<item android:id="@+id/edit_note_save"
-          android:icon="@android:drawable/ic_menu_save"
-          android:title="@string/save"
-          android:showAsAction="never"
-          android:orderInCategory="2"
-          />
 
     <item android:title="@string/send"
 		  android:id="@+id/edit_note_send"
