@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="MyTheme" parent="@android:style/Theme.Holo">
+    <style name="LightTheme" parent="@android:style/Theme.Holo.Light">
+	</style>
+	<style name="DarkTheme" parent="@android:style/Theme.Holo">
 	</style>
 </resources>
