@@ -16,13 +16,18 @@
 
 <resources>
 
-    <declare-styleable name="MyTheme">
+    <declare-styleable name="LightTheme">
         <attr name="actionbarCompatTitleStyle" format="reference" />
         <attr name="actionbarCompatItemStyle" format="reference" />
         <attr name="actionbarCompatItemHomeStyle" format="reference" />
         <attr name="actionbarCompatProgressIndicatorStyle" format="reference" />
     </declare-styleable>
-
+    <declare-styleable name="DarkTheme">
+        <attr name="actionbarCompatTitleStyle1" format="reference" />
+        <attr name="actionbarCompatItemStyle1" format="reference" />
+        <attr name="actionbarCompatItemHomeStyle1" format="reference" />
+        <attr name="actionbarCompatProgressIndicatorStyle1" format="reference" />
+    </declare-styleable>
     <declare-styleable name="BezelImageView">
         <attr name="maskDrawable" format="reference" />
         <attr name="borderDrawable" format="reference" />
